--- a/client/src/views/Countries/Countries.module.css
+++ b/client/src/views/Countries/Countries.module.css
@@ -34,7 +34,7 @@
 }
 
  /* Estilos */
- .recipesSection {
+ .countriesSection {
 	width: 100%;
 	justify-content: center;
     margin: auto;
@@ -47,12 +47,13 @@
 	align-items: center;
 }
 
-.recipesContainer {
+.countriesContainer {
 	display: flex;
 	flex-flow: row wrap;
 	justify-content: space-between;
 	padding-top: 30px;
-	justify-content: flex-start;
+	justify-content:center;
+	margin: auto;
 }
 
 .selectsContainer {
@@ -191,7 +192,7 @@
 		width: 100px !important;
 	}
 
-	.recipesContainer {
+	.countriesContainer {
 		justify-content: space-around;
 	}
 }
