--- a/client/src/views/SearchResults.jsx/Search.module.css
+++ b/client/src/views/SearchResults.jsx/Search.module.css
@@ -3,7 +3,7 @@
     text-align: center;
     background-color: #329ddc !important;
     padding: 1%;
-    box-shadow: 0px 0px 5px 1px #508100;
+    box-shadow: 0px 0px 5px 1px #9a1e38;
     border-radius: 20px;
     color: #9a1e38;
     font-family: monospace;
