--- a/client/src/views/Actividades/ActividadesCreadas.module.css
+++ b/client/src/views/Actividades/ActividadesCreadas.module.css
@@ -26,7 +26,7 @@
 }
 .divResultsContainer > .activityContainers > .activitiesContainers{
 
-    background-color: #9a1e39de;
+    background-color: #370a39a4;
     padding: 2.5%;
     box-shadow: 0px 0px 5px 1px #329ddc;
     border-radius: 20px;
@@ -80,4 +80,148 @@
     color: rgb(255, 255, 255);
     margin: auto;
     margin-top:10%;
+}
+
+.btn19,
+.btn19 *,
+.btn19 :after,
+.btn19 :before,
+.btn19:after,
+.btn19:before {
+  border: 0 solid;
+  box-sizing: border-box;
+}
+.btn19 {
+  -webkit-tap-highlight-color: transparent;
+  -webkit-appearance: button;
+  background-color: #9a1e38;
+  background-image: none;
+  color: #9a1e38;
+  cursor: pointer;
+  font-family: monospace;;
+  font-size: 80%;
+  font-weight: bold;
+  line-height: 1;
+  margin: 0;
+  margin-bottom: 10px;
+  margin-top: 0.3%;
+  -webkit-mask-image: -webkit-radial-gradient(#000, #fff);
+  
+  text-transform: uppercase;
+}
+.btn19:disabled {
+  cursor: default;
+}
+.btn19:-moz-focusring {
+  outline: auto;
+}
+.btn19 svg {
+  display: block;
+  vertical-align: middle;
+}
+.btn19 [hidden] {
+  display: none;
+}
+.btn19 {
+  border-radius: 99rem;
+  border-width: 2px;
+  padding: 0.8rem 3rem;
+  z-index: 0;
+}
+.btn-18 .textContainer,
+.btn19 {
+  overflow: hidden;
+  position: relative;
+}
+.btn-18 .text-container {
+  display: block;
+}
+.btn-18 .text {
+  display: block;
+  mix-blend-mode: difference;
+  position: relative;
+}
+.btn-18:hover .text {
+  -webkit-animation: move-up-alternate 0.3s forwards;
+  animation: move-up-alternate 0.3s forwards;
+}
+@-webkit-keyframes move-up-alternate {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(80%);
+  }
+  51% {
+    transform: translateY(-80%);
+  }
+  to {
+    transform: translateY(0);
+  }
+}
+.btn19 span {
+  mix-blend-mode: difference;
+}
+.btn19 .textContainer {
+  display: block;
+  overflow: hidden;
+  position: relative;
+}
+.btn19 .text {
+  display: block;
+  mix-blend-mode: difference;
+  position: relative;
+}
+.btn19:hover .text {
+  -webkit-animation: move-up-alternate 0.3s forwards;
+  animation: move-up-alternate 0.3s forwards;
+}
+@keyframes move-up-alternate {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(80%);
+  }
+  51% {
+    transform: translateY(-80%);
+  }
+  to {
+    transform: translateY(0);
+  }
+}
+.btn19:after,
+.btn19:before {
+  background: linear-gradient(
+    90deg,
+    #000000 25%,
+    transparent 0,
+    transparent 50%,
+    #000000 0,
+    #000000 75%,
+    transparent 0
+  );
+  content: "";
+  inset: 0;
+  position: absolute;
+  transform: translateY(var(--progress, 100%));
+  transition: transform 0.2s ease;
+}
+.btn19:after {
+  --progress: -100%;
+  background: linear-gradient(
+    90deg,
+    transparent 0,
+    transparent 25%,
+    #000000 0,
+    #000000 50%,
+    transparent 0,
+    transparent 75%,
+    #000000 0
+  );
+  z-index: -1;
+}
+.btn19:hover:after,
+.btn19:hover:before {
+  --progress: 0;
 }
